--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Run Model Tensorflow.js</title>
-        <script src="scripts/script.js"></script>
+        <script src="scripts/script1.js"></script>
         <script src="scripts/scripts2.js"></script>
         <script src='https://unpkg.com/tesseract.js@v2.1.0/dist/tesseract.min.js'></script>
         </head>
